Add duration selector for weekly/monthly payments
- Show duration dropdown only for weekly/monthly frequency selection
- Weekly: 1-26 weeks (up to ~6 months) with month approximation
- Monthly: 1-6 months
- Update total display to show breakdown (e.g., '\,000 x 4 weeks = \,000')
- Pass duration to backend for tracking
- Store duration in pledge metadata for CRM/email integration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,11 @@
+# Stripe Keys (get from https://dashboard.stripe.com/apikeys)
 STRIPE_SECRET_KEY=sk_test_YOUR_TEST_KEY_HERE
 STRIPE_WEBHOOK_SECRET=whsec_YOUR_WEBHOOK_SECRET_HERE
+
+# Flask Configuration
+FLASK_ENV=development
+BASE_URL=http://localhost:4242
+
+# Redirect URLs (set to your actual domain in production)
 SUCCESS_URL=http://localhost:4242/thank-you
 CANCEL_URL=http://localhost:4242/error
